# orodruin-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  tasks.yaml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
crates/orodruin/: Cargo.toml  build.rs
crates/orodruin/src/: app.rs  backend.rs  build_info.rs  cli.rs  config.rs  env_model.rs  error.rs  lib.rs  main.rs  state.rs
crates/orodruin/src/app/: doctor.rs  mod.rs  passthrough.rs  tests.rs  workflow.rs
scripts/: release.sh
