[package]
name = "orodruin"
version = "0.1.0"
edition = "2024"
description = "Toolbox-style Apple container wrapper for project development environments"
license = "MIT"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
libc = "0.2.171"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
toml = "0.8.16"

[dev-dependencies]
tempfile = "3.10.1"
