[package]
name = "orodruin-cli"
version = "0.1.2"
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
edition = "2024"
readme = "README.md"
description = "Toolbox-style Apple container wrapper / Linux podman wrapper for project development environments"
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/orodruin-rs"
repository = "https://github.com/ffimnsr/orodruin-rs"
license = "MIT OR Apache-2.0"
keywords = ["command-line", "task-runner", "cli", "runner", "utility"]
exclude = [
  ".gitignore"
]
autobins = false

[[bin]]
name = "orodruin"
path = "src/bin/orodruin.rs"

[[bin]]
name = "rui"
path = "src/bin/rui.rs"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
clap_complete = "4.5.8"
libc = "0.2.171"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
toml = "0.8.16"

[dev-dependencies]
tempfile = "3.10.1"
